[project]
name = "djangonaut-sample-blog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-extensions>=4.1",
    "ipython>=9.11.0",
    "lorem>=0.1.1",
    "tqdm>=4.67.3",
    "werkzeug>=3.1.6",
]

[tool.uv.sources]
django = { path = "../django", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.1",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
